k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskapi
  labels:
    app: taskapi
spec:
  type: ClusterIP
  selector:
    app: taskapi
  ports:
    - name: http
      port: 80
      targetPort: http
